--- a/night.html
+++ b/night.html
@@ -6,12 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Project03</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/night.css">
     <script src="js/main.js"></script>
 </head>
 
 <body>
 
+  <nav>
+    <a href="morning.html">Morning</a>
+    <a href="afternoon.html">Afternoon</a>
+    <a href="night.html">Night</a>
+
+  </nav>
 
 </body>
 
