morning html and css

--- a/morning.html
+++ b/morning.html
@@ -18,21 +18,42 @@
       <a href="night.html">Night</a>
     </nav>
 
-    <div class="water"></div>
-      <div class="clouds"></div>
-        <div class="opera-house">
-          <div class="foundation"></div>
-          <div class="foundation-stairs"></div>
-          <div class="foundation-lhs"></div>
-          <div class="foundation-rhs"></div>
-          <div class="shell-shadow"></div>
-          <div class="lhs-arch1"></div>
-          <div class="lhs-arch2"></div>
-          <div class="rhs-arch1"></div>
-          <div class="rhs-arch2"></div>
-          <div class="rhs-arch3"></div>
-          <div class="rhs-arch4"></div>
-        </div>
+        <div class="container">
+          <div class="water"></div>
+            <div class="clouds"></div>
+            <div class="trees1"></div>
+            <div class="trees2"></div>
+            <div class="trees3"></div>
+            <div class="trees4"></div>
+            <div class="ground"></div>
+            <!-- opera house -->
+            <div class="foundation"></div>
+            <div class="foundation-stairs"></div>
+            <div class="front-tent"></div>
+            <div class="front-tentwindow"></div>
+            <div class="foundation-lhs"></div>
+            <div class="foundation-rhs"></div>
+            <div class="shell-shadow"></div>
+            <div class="lhs-arch1"></div>
+            <div class="lhs-arch2"></div>
+            <div class="lhs-arch3"></div>
+            <div class="lhs-arch4"></div>
+            <div class="rhs-arch1"></div>
+            <div class="rhs-arch2"></div>
+            <div class="rhs-arch3"></div>
+            <div class="rhs-arch4"></div>
+            <div class="rhs-arch5"></div>
+            <div class="rhs-arch6"></div>
+            <!-- bridge -->
+            <div class="bridge-deck"></div>
+            <div class="bridge-arch"></div>
+            <div class="bridge-arch2"></div>
+            <div class="steel"></div>
+            <div class="steel1"></div>
+            <div class="steel2"></div>
+            <div class="steel3"></div>
+            <div class="steel4"></div>
+            </div>
 
 </body>
 
