--- a/morning.html
+++ b/morning.html
@@ -48,11 +48,26 @@
             <div class="bridge-deck"></div>
             <div class="bridge-arch"></div>
             <div class="bridge-arch2"></div>
+            <div class="steelv1"></div>
             <div class="steel"></div>
             <div class="steel1"></div>
             <div class="steel2"></div>
             <div class="steel3"></div>
             <div class="steel4"></div>
+            <div class="steel5"></div>
+            <div class="steel6"></div>
+            <div class="steel7"></div>
+            <div class="steel8"></div>
+            <!--  ferry-->
+            <div class="ferry_hull"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+
+
+
             </div>
 
 </body>
