--- a/morning.html
+++ b/morning.html
@@ -34,17 +34,23 @@
     </div>
 
         <div class="container">
-          <div class="sun"></div>
           <div class="water"></div>
-            <div class="clouds"></div>
-            <div class="trees1"></div>
-            <div class="trees1a"></div>
-            <div class="trees2"></div>
-            <div class="trees2a"></div>
-            <div class="trees3"></div>
-            <div class="trees3a"></div>
-            <div class="trees4"></div>
-            <div class="ground"></div>
+          <!-- clouds -->
+            <div class="cloud1"></div>
+            <div class="cloud2"></div>
+            <div class="cloud3"></div>
+            <div class="cloud4"></div>
+            <div class="cloud10"></div>
+
+                <!-- trees -->
+                <div class="trees1"></div>
+                <div class="trees1a"></div>
+                <div class="trees2"></div>
+                <div class="trees2a"></div>
+                <div class="trees3"></div>
+                <div class="trees3a"></div>
+                <div class="trees4"></div>
+                <div class="ground"></div>
             <!-- opera house -->
             <div class="foundation"></div>
             <div class="foundation-shadow"></div>
