--- a/morning.html
+++ b/morning.html
@@ -35,6 +35,22 @@
 
         <div class="container">
           <div class="water"></div>
+          <div class="ripple-darkblue"></div>
+          <div class="ripple-darkblue2"></div>
+          <div class="ripple-darkblue3"></div>
+          <div class="ripple-darkblue4"></div>
+          <div class="ripple-darkblue5"></div>
+          <div class="ripple-darkblue6"></div>
+          <div class="ripple-darkblue7"></div>
+          <div class="ripple-darkblue8"></div>
+          <div class="ripple-lightblue"></div>
+          <div class="ripple-lightblue2"></div>
+          <div class="ripple-lightblue3"></div>
+          <div class="ripple-lightblue4"></div>
+          <div class="ripple-grey"></div>
+          <div></div>
+          <div></div>
+
           <!-- clouds -->
             <div class="cloud1"></div>
             <div class="cloud2"></div>
