--- a/night.html
+++ b/night.html
@@ -11,14 +11,110 @@
 </head>
 
 <body>
+    <nav>
+      <a href="morning.html">Morning</a>
+      <a href="afternoon.html">Afternoon</a>
+      <a href="night.html">Night</a>
+    </nav>
 
-  <nav>
-    <a href="morning.html">Morning</a>
-    <a href="afternoon.html">Afternoon</a>
-    <a href="night.html">Night</a>
+    <div class="sun">
+        <div class="ray_box">
+            <div class="ray ray1"></div>
+            <div class="ray ray2"></div>
+            <div class="ray ray3"></div>
+            <div class="ray ray4"></div>
+            <div class="ray ray5"></div>
+            <div class="ray ray6"></div>
+            <div class="ray ray7"></div>
+            <div class="ray ray8"></div>
+            <div class="ray ray9"></div>
+            <div class="ray ray10"></div>
+        </div>
+    </div>
 
-  </nav>
+        <div class="container">
+          <div class="water"></div>
+          <div class="ripple-darkblue"></div>
+          <div class="ripple-darkblue2"></div>
+          <div class="ripple-darkblue3"></div>
+          <div class="ripple-darkblue4"></div>
+          <div class="ripple-darkblue5"></div>
+          <div class="ripple-darkblue6"></div>
+          <div class="ripple-darkblue7"></div>
+          <div class="ripple-darkblue8"></div>
+          <div class="ripple-lightblue"></div>
+          <div class="ripple-lightblue2"></div>
+          <div class="ripple-lightblue3"></div>
+          <div class="ripple-lightblue4"></div>
 
+          <!-- clouds -->
+            <div class="cloud1"></div>
+            <div class="cloud2"></div>
+            <div class="cloud3"></div>
+            <div class="cloud4"></div>
+            <div class="cloud10"></div>
+
+                <!-- trees -->
+                <div class="trees1"></div>
+                <div class="trees1a"></div>
+                <div class="trees2"></div>
+                <div class="trees2a"></div>
+                <div class="trees3"></div>
+                <div class="trees3a"></div>
+                <div class="trees4"></div>
+                <div class="ground"></div>
+
+            <!-- opera house -->
+            <div class="foundation"></div>
+            <div class="foundation-shadow"></div>
+            <div class="foundation-stairs"></div>
+            <div class="front-tent"></div>
+            <div class="front-tentwindow"></div>
+            <div class="foundation-lhs"></div>
+            <div class="foundation-rhs"></div>
+            <div class="shell-shadow"></div>
+            <div class="lhs-arch1"></div>
+            <div class="lhs-arch2"></div>
+            <div class="lhs-arch2s"></div>
+            <div class="lhs-arch3"></div>
+            <div class="lhs-arch4"></div>
+            <div class="rhs-arch1"></div>
+            <div class="rhs-arch1s"></div>
+            <div class="rhs-arch2"></div>
+            <div class="rhs-arch3"></div>
+            <div class="rhs-arch3s"></div>
+            <div class="rhs-arch4"></div>
+            <div class="rhs-arch5"></div>
+            <div class="rhs-arch6"></div>
+            <!-- bridge -->
+            <div class="blinking-bill"></div>
+            <div class="bridge-deck"></div>
+            <div class="bridge-arch"></div>
+            <div class="bridge-arch2"></div>
+            <div class="steelv1"></div>
+            <div class="steel"></div>
+            <div class="steel1"></div>
+            <div class="steel2"></div>
+            <div class="steel3"></div>
+            <div class="steel4"></div>
+            <div class="steel5"></div>
+            <div class="steel6"></div>
+            <div class="steel7"></div>
+            <div class="steel8"></div>
+
+            <!--  ferry-->
+            <div class="ferry_hull"></div>
+            <div class="ferry_cabin"></div>
+            <div class="ferry_front"></div>
+            <div class="ferry_front2"></div>
+            <div class="ferry-window"></div>
+            <div class="ferry-window2"></div>
+            <div class="ferry-window3"></div>
+            <div class="ferry-window4"></div>
+            <div class="ferry-antenna"></div>
+            <div class="ferry-antenna2"></div>
+            <div class="ferry-name"></div>
+
+        </div>
 </body>
-
 </html>
