--- a/night.html
+++ b/night.html
@@ -16,23 +16,12 @@
       <a href="afternoon.html">Afternoon</a>
       <a href="night.html">Night</a>
     </nav>
-
-    <div class="sun">
-        <div class="ray_box">
-            <div class="ray ray1"></div>
-            <div class="ray ray2"></div>
-            <div class="ray ray3"></div>
-            <div class="ray ray4"></div>
-            <div class="ray ray5"></div>
-            <div class="ray ray6"></div>
-            <div class="ray ray7"></div>
-            <div class="ray ray8"></div>
-            <div class="ray ray9"></div>
-            <div class="ray ray10"></div>
-        </div>
+    <div class="moon"></div>
     </div>
 
         <div class="container">
+          <div class="bat"></div>
+          <div class="bat2"></div>
           <div class="water"></div>
           <div class="ripple-darkblue"></div>
           <div class="ripple-darkblue2"></div>
@@ -103,7 +92,7 @@
             <div class="steel8"></div>
 
             <!--  ferry-->
-            <div class="ferry_hull"></div>
+            <!-- <div class="ferry_hull"></div>
             <div class="ferry_cabin"></div>
             <div class="ferry_front"></div>
             <div class="ferry_front2"></div>
@@ -113,7 +102,7 @@
             <div class="ferry-window4"></div>
             <div class="ferry-antenna"></div>
             <div class="ferry-antenna2"></div>
-            <div class="ferry-name"></div>
+            <div class="ferry-name"></div> -->
 
         </div>
 </body>
