changed morning html to index html

--- a/index.html
+++ b/index.html
@@ -11,13 +11,6 @@
 </head>
 
 <body>
-
-    <nav>
-      <a href="morning.html">Morning</a>
-      <a href="afternoon.html">Afternoon</a>
-      <a href="night.html">Night</a>
-    </nav>
-
     <div class="sun">
         <div class="ray_box">
             <div class="ray ray1"></div>
@@ -34,6 +27,13 @@
     </div>
 
         <div class="container">
+
+          <nav>
+            <a href="index.html">Morning</a>
+            <a href="afternoon.html">Afternoon</a>
+            <a href="night.html">Night</a>
+          </nav>
+
           <div class="water"></div>
           <div class="ripple-darkblue"></div>
           <div class="ripple-darkblue2"></div>
