--- a/night.html
+++ b/night.html
@@ -11,15 +11,17 @@
 </head>
 
 <body>
-    <nav>
-      <a href="morning.html">Morning</a>
-      <a href="afternoon.html">Afternoon</a>
-      <a href="night.html">Night</a>
-    </nav>
+
     <div class="moon"></div>
-    </div>
 
         <div class="container">
+
+          <nav>
+            <a href="index.html">Morning</a>
+            <a href="afternoon.html">Afternoon</a>
+            <a href="night.html">Night</a>
+          </nav>
+          
           <div class="bat"></div>
           <div class="bat2"></div>
           <div class="water"></div>
