added an plane to the morning page

--- a/afternoon.html
+++ b/afternoon.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Project03</title>
+  <link href="https://fonts.googleapis.com/css?family=Maven+Pro:700" rel="stylesheet">
   <link rel="stylesheet" href="css/afternoon.css">
     <script src="js/main.js"></script>
+
 </head>
 
 <body>
@@ -27,12 +29,11 @@
     </div>
 
         <div class="container">
+            <div class="css-city">CSS City</div>
 
-          <nav>
-            <a href="index.html">Morning</a>
-            <a href="afternoon.html">Afternoon</a>
-            <a href="night.html">Night</a>
-          </nav>
+            <div class="morning"> <a href="index.html">Morning</a></div>
+            <div class="afternoon"><a href="afternoon.html">Afternoon</a></div>
+            <div class="night"><a href="night.html">Night</a></div>
 
           <div class="water"></div>
           <div class="ripple-darkblue"></div>
