search lights and stars added to night page

--- a/afternoon.html
+++ b/afternoon.html
@@ -35,6 +35,8 @@
             <div class="afternoon"><a href="afternoon.html">Afternoon</a></div>
             <div class="night"><a href="night.html">Night</a></div>
 
+          <div class="shark"></div>
+
           <div class="water"></div>
           <div class="ripple-darkblue"></div>
           <div class="ripple-darkblue2"></div>
