--- a/night.html
+++ b/night.html
@@ -24,6 +24,15 @@
 
           <div class="bat"></div>
           <div class="bat2"></div>
+
+          <div class="vivid-light"></div>
+
+          <div class="star1"></div>
+          <div class="star2"></div>
+          <div class="star3"></div>
+          <div class="star4"></div>
+
+          <!-- water -->
           <div class="water"></div>
           <div class="ripple-darkblue"></div>
           <div class="ripple-darkblue2"></div>
