parachute added to afternoon

--- a/afternoon.html
+++ b/afternoon.html
@@ -29,16 +29,19 @@
     </div>
 
         <div class="container">
-            <div class="css-city">CSS City</div>
-
-            <div class="morning"> <a href="index.html">Morning</a></div>
-            <div class="afternoon"><a href="afternoon.html">Afternoon</a></div>
-            <div class="night"><a href="night.html">Night</a></div>
-
+      <!-- nav -->
+            <div class="morning"><a href="index.html">AM</a></div>
+            <div class="afternoon"><a href="afternoon.html">PM</a></div>
+            <div class="night"><a href="night.html">NIGHT</a></div>
+<!--  ////////////////////////////////////////////-->
           <div class="afternoon1"></div>
-
           <div class="shark"></div>
 
+          <div class="parachute"></div>
+          <div class="parachute-shape">CSS CITY</div>
+          <div class="parachute-string"></div>
+          <div class="parachute-person"></div>
+<!-- water///////////////////////////////// -->
           <div class="water"></div>
           <div class="ripple-darkblue"></div>
           <div class="ripple-darkblue2"></div>
