--- a/night.html
+++ b/night.html
@@ -18,9 +18,9 @@
         <div class="container">
             <div class="css-city">CSS City</div>
 
-            <div class="morning"> <a href="index.html">Morning</a></div>
-            <div class="afternoon"><a href="afternoon.html">Afternoon</a></div>
-            <div class="night"><a href="night.html">Night</a></div>
+            <div class="morning"> <a href="index.html">AM</a></div>
+            <div class="afternoon"><a href="afternoon.html">PM</a></div>
+            <div class="night"><a href="night.html">NIGHT</a></div>
 
           <div class="bat"></div>
           <div class="bat2"></div>
