parachute person added

--- a/afternoon.html
+++ b/afternoon.html
@@ -41,6 +41,7 @@
           <div class="parachute-shape">CSS CITY</div>
           <div class="parachute-string"></div>
           <div class="parachute-person"></div>
+          <div class="person-head"></div>
 <!-- water///////////////////////////////// -->
           <div class="water"></div>
           <div class="ripple-darkblue"></div>
