--- a/afternoon.html
+++ b/afternoon.html
@@ -30,13 +30,19 @@
 
         <div class="container">
       <!-- nav -->
-            <div class="morning"><a href="index.html">AM</a></div>
-            <div class="afternoon"><a href="afternoon.html">PM</a></div>
-            <div class="night"><a href="night.html">NIGHT</a></div>
+      <!-- nav -->
+          <div class="morning"><a href="index.html">AM</a></div>
+          <div class="fish-tailam"></div>
+
+          <div class="afternoon"><a href="afternoon.html">PM</a></div>
+          <div class="fish-tailpm"></div>
+
+          <div class="night"><a href="night.html">NIGHT</a></div>
+          <div class="fish-tailnight"></div>
 <!--  ////////////////////////////////////////////-->
           <div class="afternoon1"></div>
           <div class="shark"></div>
-
+<!--  parachute///////////////////////////////////-->
           <div class="parachute"></div>
           <div class="parachute-shape">CSS CITY</div>
           <div class="parachute-string"></div>
