--- a/index.html
+++ b/index.html
@@ -28,15 +28,25 @@
     </div>
 
         <div class="container">
+
+          <!--  plane -->
         <div class="css-city">CSS CITY</div>
         <div class="plane-body"></div>
         <div class="plane-tail"></div>
         <div class ="plane-prop"></div>
 
+        <!-- nav -->
             <div class="morning"><a href="index.html">AM</a></div>
-            <div class="afternoon"><a href="afternoon.html">PM</a></div>
-            <div class="night"><a href="night.html">NIGHT</a></div>
+            <div class="fish-tailam"></div>
 
+            <div class="afternoon"><a href="afternoon.html">PM</a></div>
+            <div class="fish-tailpm"></div>
+
+            <div class="night"><a href="night.html">NIGHT</a></div>
+            <div class="fish-tailnight"></div>
+
+
+        <!-- water///////////////////////////////// -->
           <div class="water"></div>
           <div class="ripple-darkblue"></div>
           <div class="ripple-darkblue2"></div>
@@ -58,7 +68,7 @@
             <div class="cloud4"></div>
             <div class="cloud10"></div>
 
-                <!-- trees -->
+            <!-- trees -->
                 <div class="trees1"></div>
                 <div class="trees1a"></div>
                 <div class="trees2"></div>
