--- a/night.html
+++ b/night.html
@@ -18,15 +18,22 @@
         <div class="container">
             <div class="css-city">CSS City</div>
 
-            <div class="morning"> <a href="index.html">AM</a></div>
-            <div class="afternoon"><a href="afternoon.html">PM</a></div>
-            <div class="night"><a href="night.html">NIGHT</a></div>
+            <!-- nav -->
+                <div class="morning"><a href="index.html">AM</a></div>
+                <div class="fish-tailam"></div>
 
+                <div class="afternoon"><a href="afternoon.html">PM</a></div>
+                <div class="fish-tailpm"></div>
+
+                <div class="night"><a href="night.html">NIGHT</a></div>
+                <div class="fish-tailnight"></div>
+
+        <!-- bats///////////////////////////////// -->
           <div class="bat"></div>
           <div class="bat2"></div>
 
           <div class="vivid-light"></div>
-
+        <!-- stars//////////////////////////////-->
           <div class="star1"></div>
           <div class="star2"></div>
           <div class="star3"></div>
